Late Submit for 05 Lab

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Apologies for the delay. I'm slowly working through. Thank you for the assistance. -->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
